--- a/js01.html
+++ b/js01.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script>
+    <!-- <script>
         function myFunction() {
             document.getElementById("demo").innerHTML = "段落已被更改。";
         }
-    </script>
+    </script> -->
+    <script src="myScript.js"></script>
 </head>
 
 <body>
-    <h2>Head 中的 JavaScript</h2>
+    <h2>getElementById button</h2>
 
-    <p id="demo">一个段落。</p>
+    <p id="demo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, porro!</p>
 
-    <button type="button" onclick="myFunction()">试一试</button>
+    <button type="button" onclick="myFunction()">click</button>
 </body>
 
 </html>
