--- a/event.html
+++ b/event.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="event.js"></script>
+    <title>JS Event</title>
+    <script src="event.js" defer></script>
 </head>
 
 <body>
-
+    <button>Click Me</button>
 </body>
 
 </html>
