--- a/event.html
+++ b/event.html
@@ -10,8 +10,11 @@
 
 <body>
     <button>Click Me</button>
-    <h1>Click image for open a present:</h1>
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1083533/gift-icon.png" />
+    <div id="container">
+        <h1>Click image for open a present:</h1>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1083533/gift-icon.png" />
+    </div>
+
 </body>
 
 </html>
