add style.css(make img hidden faster

--- a/event.html
+++ b/event.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Event</title>
     <script src="event.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <button>Click Me</button>
+    <!-- <button>Click Me</button>
     <div id="container">
         <h1>Click image for open a present:</h1>
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1083533/gift-icon.png" />
+    </div> -->
+
+    <div id="gift-outside">
+        <h1>Click for a present:</h1>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1083533/gift-icon.png" />
     </div>
+    <div id="gift-inside" class="hidden">
+        <h1>Hooray!</h1>
+        <img src="https://media.giphy.com/media/27ppQUOxe7KlG/giphy.gif" />
 
 </body>
 
